minor changes for alembic

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,4 +1,7 @@
 # A generic, single database configuration.
+[DEFAULT]
+interpolation = none
+
 
 [alembic]
 # path to migration scripts
@@ -63,7 +66,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = ""
+sqlalchemy.url = postgresql://user:password@localhost/dbname
 
 
 [post_write_hooks]
