--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-version: "3"
-service: 
+services: 
   api:
     build: .
     ports:
@@ -7,14 +6,14 @@ service:
     volumes:
       - ./:/usr/src/app:ro
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
-    en_file:
+    env_file:
       - ./.env
     
-  posgres:
+  postgres:
     image: postgres
     env_file:
       - ./.env
     volumes:
       - postgres-db:/var/lib/postgresql/data
-  volumes:
-   posgres-db:
+volumes:
+  postgres-db:
