--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   api:
     build: .
     ports:
-      - 4000:4000
+      - 8000:8000
     volumes:
-      - ./:/usr/src/app:ro
+      - ./:/usr/src/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     env_file:
       - ./.env
