--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -13,6 +13,6 @@ jobs:
               with:
                 python-version: "3.9"
             - name: update pip
-              run: python -m pip insta;; --upgrade pi
+              run: python -m pip install --upgrade pip
             - name: installing dependencies
               run: pip install -r requirements.txt
