--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,6 +16,11 @@ jobs:
 
             - name: update pip
               run: python -m pip install --upgrade pip
-              
+
             - name: installing dependencies
               run: pip install -r requirements.txt
+
+            - name: test with pytest
+              run: |
+                pip install pytest
+                pytest
