--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,7 +17,7 @@ jobs:
           postgres:
             image: postgres
             env:
-              POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+              POSTGRES_PASSWORD: ${{ secrets.POSTGRESS_PASSWORD }}
               POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
             ports:
               - 5432:5432
