--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,7 +18,7 @@ jobs:
             image: postgres
             env:
               POSTGRES_PASSWORD: ${{ secrets.POSTGRESS_PASSWORD }}
-              POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+              POSTGRES_DB: ${{ secrets.POSTGRES_DB }} #for efficieny maybe fastapi_01_test
             ports:
               - 5432:5432
             options: >-
