--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -46,3 +46,20 @@ jobs:
               run: |
                 pip install pytest
                 pytest
+            
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Build and push
+              uses: docker/build-push-action@v6
+              with:
+                platforms: linux/amd64,linux/arm64
+                file: ./Dockerfile
+                push: true
+                tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
