--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Code
 on: [push, pull_request]
 
 jobs:
-    job1:
+    build:
         environment: testing
         env:
           DB_HOST: ${{ secrets.DB_HOST }}
@@ -47,19 +47,37 @@ jobs:
                 pip install pytest
                 pytest
             
-            - name: Login to Docker Hub
-              uses: docker/login-action@v3
-              with:
-                username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+            # for docker 
+            # - name: Login to Docker Hub   
+            #   uses: docker/login-action@v3
+            #   with:
+            #     username: {{ secrets.DOCKER_USERNAME }}
+            #     password: {{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and push
-              uses: docker/build-push-action@v6
-              with:
-                platforms: linux/amd64,linux/arm64
-                file: ./Dockerfile
-                push: true
-                tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+            # - name: Set up Docker Buildx
+            #   uses: docker/setup-buildx-action@v3
+
+            # - name: Build and push
+            #   uses: docker/build-push-action@v6
+            #   with:
+            #     platforms: linux/amd64,linux/arm64
+            #     file: ./Dockerfile
+            #     push: true
+            #     tags: {{ secrets.DOCKER_USERNAME }}/{{ github.event.repository.name }}:latest
+    deploy:
+       environment: production
+       runs-on: ubuntu-latest
+       needs: [build] #with this we set sequential order, deploy will run only after 'build'
+
+       steps:
+         - name: deploy practice on Ubuntu VM
+           uses: appleboy/ssh-action@v1
+           with:
+            host: ${{ secrets.PROD_U_HOST }}
+            username: ${{ secrets.PROD_U_USERNAME }}
+            password: ${{ secrets.PROD_U_PASSWORD }}
+            script:
+              cd app/src
+              git pull
+              sudo ${{ secrets.PROD_U_PASSWORD }} | sudo -S systemctl restart fastapidemo        
